# vanguarstew

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  agent.py  pyproject.toml  steward_agent_files.json
.github/workflows/: ci.yml  labeler.yml
agent/: __init__.py  context.py  decider.py  llm.py  philosophy.py  planner.py
benchmark/: __init__.py  freeze.py  judge.py  repo_set.py  runner.py  score.py  taskgen.py
benchmark/repo_sets/: curated.json
docs/: architecture.md  issue-97.md
scripts/: run_eval.py
tests/: test_freeze.py  test_judge.py  test_multi_repo.py  test_planner.py  test_repo_set.py  test_score.py  test_smoke.py
