[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "steward"
version = "0.0.1"
description = "A general repository-maintainer agent and its GitHub-history replay benchmark."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
py-modules = ["agent"]
packages = ["agent", "benchmark"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
